fixed bug in chrome on W11 where the scrollbars have white borders

--- a/Darklearning.user.css
+++ b/Darklearning.user.css
@@ -227,6 +227,7 @@ urlenc(x){
 		&-thumb{
 			background-color:bg3 !important;
 			border-radius:0.4em;
+			border:none;
 		}
 	}
 	:root,
